objects/SupportRequest_Routing_Rules__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignToQueue__c</fullName>
        <label>AssignToQueue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssignTo</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SupportRequest_Routing_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Group__c</fullName>
        <label>Business Group</label>
        <picklist>
            <picklistValues>
                <fullName>Cross-BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPQ_Boundary_System__c</fullName>
        <description>This field is used for CPQ routing rules</description>
        <label>CPQ Boundary System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPQ_Route__c</fullName>
        <label>CPQ Route</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Name_RecordType_Name__c</fullName>
        <externalId>true</externalId>
        <label>Form Name(RecordType Name)</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Business_Unit__c</fullName>
        <label>Global Business Unit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managed_By__c</fullName>
        <label>Managed By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Node__c</fullName>
        <description>This will contain the Nodes for Start form CPQ support Request</description>
        <label>Node</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotificationToEmail__c</fullName>
        <label>NotificationToEmail</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NotificationTo__c</fullName>
        <label>NotificationToEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Criteria__c</fullName>
        <label>Other Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_For__c</fullName>
        <label>Request For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <picklist>
            <picklistValues>
                <fullName>USPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Atlantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub Region</label>
        <picklist>
            <picklistValues>
                <fullName>UK &amp; I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GWE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iberia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP without Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDW Other Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDW Other Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Europe Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FDW Other EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Request_recordTypeID__c</fullName>
        <label>Support Request recordTypeID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Sub_Type__c</fullName>
        <label>Support Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Config / Price / Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config/Price/Quote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <label>Support Type</label>
        <picklist>
            <picklistValues>
                <fullName>Quote-to-Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote to Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_For_PunchOut__c</fullName>
        <label>URL For PunchOut</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workshop_Type__c</fullName>
        <label>Workshop Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business 2 IT Alignment Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Value Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Affinity Ranking Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Center Discovery Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Converged Cloud Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Best Practices Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Design Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transformation Workshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win Strategy Lab Workshop (internal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Creation Workshop (internal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Strategy Lab Workshop (internal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrow Session Workshop (internal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Shaping Workshop (internal)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Sales Coaching Workshop (internal)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SupportRequest Routing Rules</label>
    <nameField>
        <displayFormat>SRR-{00000000}</displayFormat>
        <label>Support Request Routing Rules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SupportRequest Routing Rules</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>